--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "vercel": "^25.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
