--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@types/three": "^0.176.0",
-    "caroumesh": "^1.2.2",
     "leva": "^0.10.0",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -32,5 +31,10 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "unrs-resolver",
+    "vercel"
+  ]
 }
