--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@types/three": "^0.176.0",
+    "@vercel/analytics": "^1.5.0",
     "leva": "^0.10.0",
     "next": "15.3.2",
     "react": "^19.0.0",
