--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.176.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "framer-motion": "^12.18.1",
     "leva": "^0.10.0",
     "next": "15.3.2",
     "react": "^19.0.0",
