--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@types/three": "^0.176.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "framer-motion": "^12.18.1",
     "leva": "^0.10.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-transition-group": "^4.4.5",
     "three": "^0.176.0",
     "vercel": "^25.2.0"
   },
@@ -30,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-transition-group": "^4.4.12",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "raw-loader": "^4.0.2",
